feat(issue): 이슈 계통도 API 추가
